--- a/nodebasic/Modules/connect/package.json
+++ b/nodebasic/Modules/connect/package.json
@@ -11,6 +11,7 @@
         "start": "node index"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^5.2.1",
         "mongoose": "^9.1.4",
         "nodemon": "^3.1.11"
